monitoring/configs/grafana-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.coding-challenge.hess.lan`)
      kind: Rule
      priority: 10
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
