monitoring/configs/prometheus-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.coding-challenge.hess.lan`)
      kind: Rule
      priority: 10
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
